--- a/index.html
+++ b/index.html
@@ -1,8 +1,22 @@
 <!DOCTYPE html>
-<html>
-<body>
+<html lang="en-gb">
+  <head>
 
-<h1>Coming soon</h1>
-
-</body>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Steve Rippington</title>
+    <meta name="description" content="Steve Rippington">
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+<link rel="manifest" href="site.webmanifest">
+<meta name="msapplication-TileColor" content="#da532c">
+    <meta name="robots" content="index,follow">
+      <meta name="theme-color" content="#091E3D"/>
+    <link rel="stylesheet" href="css/style.css">
+    </head>
+    <body>
+		<h1>Coming soon</h1>
+		This is some standard text
+    </body>
 </html>
